--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,16 +14,14 @@
   </div>
 </nav>
 <mat-sidenav-container>
-  <mat-sidenav #sidenav mode="over" [(opened)]="opened" (opened)="events.push('open!')"
-                (closed)="events.push('close!')" position='end'>
-                <ul class="side-bar-list">
-                  <a routerLink="/home" routerLinkActive="active">Home</a>
-                  <a routerLink="/about" routerLinkActive="active">About</a>
-                  <a routerLink="/resume" routerLinkActive="active">Resume</a>
-                  <a routerLink="/contact" routerLinkActive="active">Contact</a>
-                </ul>
+  <mat-sidenav #sidenav mode="over" [(opened)]="opened" position='end'>
+    <ul class="side-bar-list">
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+      <a routerLink="/about" routerLinkActive="active">About</a>
+      <a routerLink="/resume" routerLinkActive="active">Resume</a>
+      <a routerLink="/contact" routerLinkActive="active">Contact</a>
+    </ul>
   </mat-sidenav>
-
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
