--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,11 @@
     <div class="img-overlay">
         <h2 class="front-end">Front-End</h2>
         <h1 class="web-dev">Web Developer</h1>
-
     </div>
     <img src="assets/img/code-screen-4.jpg" alt="">
 </div>
 
-<h1>Projects</h1>
+<h1 class="projects">Projects</h1>
 <div class="projects-container">
     <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div>
