--- a/src/app/home/project/project.component.html
+++ b/src/app/home/project/project.component.html
@@ -1,6 +1,11 @@
 <div class="project-container">
     <h3>{{ project.title }}</h3>
+    <div class="icon-container">
+        <mat-icon>{{project.icon}}</mat-icon>
+    </div>
     <p>{{ project.desc }}</p>
-    <a target='_blank' [href]="project.codeURL">See Code</a>
-    <a target='_blank' [href]="project.appURL">See App</a>
+    <div class="btn-container">
+        <a target='_blank' [href]="project.codeURL">See Code</a>
+        <a target='_blank' [href]="project.appURL">See App</a>    
+    </div>
 </div>
