--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
   </div>
 </nav>
 <mat-sidenav-container>
-  <mat-sidenav #sidenav mode="over" [(opened)]="opened" position='end'>
+  <mat-sidenav #sidenav mode="over" [(opened)]="opened" position='end' class="sidenav">
+    <h2>Menu</h2>
     <ul class="side-bar-list">
       <a routerLink="/home" routerLinkActive="active">Home</a>
       <a routerLink="/about" routerLinkActive="active">About</a>
@@ -29,10 +30,21 @@
 
 
 <footer>
-  <ul>
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/about" routerLinkActive="active">About</a>
-    <a routerLink="/resume" routerLinkActive="active">Resume</a>
-    <a routerLink="/contact" routerLinkActive="active">Contact</a>
-  </ul>
+  <div class="footer-container">
+    <ul>
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+      <a routerLink="/about" routerLinkActive="active">About</a>
+      <a routerLink="/resume" routerLinkActive="active">Resume</a>
+      <a routerLink="/contact" routerLinkActive="active">Contact</a>
+    </ul>
+    <div class="social-links-container">
+      <h2 >Social</h2>
+      <div class="social-links">
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="bryce-byker"><a class="LI-simple-link" href='https://www.linkedin.com/in/bryce-byker?trk=profile-badge'>Bryce Byker</a></div>
+        <p class="plus">+</p>
+        <img class="github-logo" src="assets/img/GitHub-logo.png" alt="">  
+      </div>  
+    </div>  
+  </div>
+  <p class="design">Design by Bryce Byker</p>
 </footer>
