--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,14 @@
       <a routerLink="/resume" routerLinkActive="active">Resume</a>
       <a routerLink="/contact" routerLinkActive="active">Contact</a>
     </ul>
+    <div>
+      <div class="contact">
+        <h2>Contact</h2>
+        <p>Bryce Byker</p>
+        <p>616-889-3896</p>
+        <p>bryce1492@gmail.com</p>
+      </div>
+    </div>
     <div class="social-links-container">
       <h2 >Social</h2>
       <div class="social-links">
