--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -83,9 +83,11 @@ h2 {
     padding-right: 3rem;
     padding-left: 3rem;
 }
-ul {
+footer ul {
+    justify-content: center;
     padding-left: 0;
     height: 55px;
+    width: 100vw;
 }
 footer {
     background-color: #222;
@@ -95,6 +97,15 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.footer-container h2 {
+    color: #AAA;
+}
+
+.contact {
+    color: white;
+    text-align: center;
 }
 
 .LI-profile-badge {
