add footer component & minor refactoring to app component html/css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,30 +29,4 @@
 </mat-sidenav-container>
 
 
-<footer>
-  <div class="footer-container">
-    <ul>
-      <a routerLink="/home" routerLinkActive="active">Home</a>
-      <a routerLink="/about" routerLinkActive="active">About</a>
-      <a routerLink="/resume" routerLinkActive="active">Resume</a>
-      <a routerLink="/contact" routerLinkActive="active">Contact</a>
-    </ul>
-    <div>
-      <div class="contact">
-        <h2>Contact</h2>
-        <p>Bryce Byker</p>
-        <p>616-889-3896</p>
-        <p>bryce1492@gmail.com</p>
-      </div>
-    </div>
-    <div class="social-links-container">
-      <h2 >Social</h2>
-      <div class="social-links">
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="bryce-byker"><a class="LI-simple-link" href='https://www.linkedin.com/in/bryce-byker?trk=profile-badge'>Bryce Byker</a></div>
-        <p class="plus">+</p>
-        <img class="github-logo" src="assets/img/GitHub-logo.png" alt="">  
-      </div>  
-    </div>  
-  </div>
-  <p class="design">Design by Bryce Byker</p>
-</footer>
+<app-footer></app-footer>
