add my-card comp. Formatting of About pg. Minor adjustments to sidenav (color & spacing)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!!</p>
+<div>
+    <h1>About</h1>
+    <app-my-card></app-my-card>
+    <div class="about-me">
+        <h2>A Little About Me</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi reiciendis ea minima, maiores cupiditate iusto ex officia soluta doloremque in, dolore laborum reprehenderit obcaecati deserunt dicta itaque ullam. Sunt, odio.
+        Perspiciatis harum ratione suscipit dignissimos. Beatae eos sed quam, natus consectetur magnam similique, harum laudantium quis nemo asperiores dolorum error numquam corporis adipisci deserunt. Autem assumenda ipsam impedit sed ducimus.
+    </div>
+</div>
