--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,32 @@
-<p>contact works!</p>
+<h1>Contact</h1>
+
+<div class="form-container">
+    <!-- <form> -->
+        <div class="form-el">
+            <mat-form-field>
+                <input matInput placeholder='First Name' name="firstName" id="firstName" type="text">
+            </mat-form-field>
+        </div>
+        <div class="form-el">
+            <mat-form-field>
+                <input matInput placeholder="Last Name" name="lastName" id="lastName" type="text">            
+            </mat-form-field>
+        </div>
+        <div class="form-el">
+            <mat-form-field>
+                <input matInput placeholder="Company" name="company" id="company" type="text">
+            </mat-form-field>
+        </div>
+        <div class="form-el">
+            <mat-form-field>
+                <input matInput placeholder="E-mail" name="email" id="email" type="text">
+            </mat-form-field>
+        </div>
+        <div class="form-el">
+            <mat-form-field>
+                <textarea matInput placeholder="Comment" name="comment" id="comment" cols="30" rows="10"></textarea>
+            </mat-form-field>
+        </div>
+        <button>Submit</button>
+    <!-- </form> -->
+</div>
