--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -37,11 +37,11 @@ img {
 .projects-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
 }
-
+/* May Need to set height/width so the next line doesn't take up whole space */
 app-project {
     display: flex;
-    min-width: 300px;
     flex: 1;
     margin: 2rem;
     border-radius: 1rem;
@@ -52,11 +52,11 @@ app-project:hover {
     box-shadow: 0px 0px 10px #AAA;
 }
 
-.projects {
+.projects-h1 {
     text-align: center;
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 600px) {
     .front-end {
         font-size: 1.5rem;
     }
@@ -64,3 +64,16 @@ app-project:hover {
         font-size: 4rem;
     }
 }
+
+@media screen and (min-width: 840px) {
+    .projects-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    app-project {
+        min-width: 340px;
+        max-width: 340px;
+    }
+}
+
