--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <img src="assets/img/code-screen-4.jpg" alt="">
 </div>
 
-<h1 class="projects">Projects</h1>
+<h1 class="projects-h1">Projects</h1>
 <div class="projects-container">
     <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div>
