--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -13,3 +13,44 @@ h1 {
     display: flex;
     flex-direction: column;
 }
+
+button {
+    color: #000080;
+    font-size: 1rem;
+    border-radius: .25em;
+    text-decoration: none;
+    border: 1px solid #000080;
+    padding: .5em 1em;
+    text-align: center;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+ 
+button:hover {
+    color: #EEE;
+    background-color: #000080;
+}
+
+
+@media screen and (min-width: 480px) {
+    .inner-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 1rem;
+        box-shadow: 0px 0px 10px #AAA;
+        width: 75vw;
+        padding: 2rem;
+        margin-bottom: 2rem;
+    }
+    .form-el {
+        max-width: 67%;
+    }
+    
+}
+
+@media screen and (min-width: 601px) {
+    .inner-container {
+        width: 50vw
+    }
+}
