--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 * {
     font-family: 'Open Sans', sans-serif;
@@ -8,4 +7,8 @@
 html, body {
     margin: 0;
     background-color: #EEEEEE;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    color: #000080;
 }
