--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -32,7 +32,7 @@
                 <mat-error *ngIf="formErrors['message']">{{ formErrors['message'] }}</mat-error>
             </mat-form-field>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
     
     </form>
 </div>
