--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,10 +45,12 @@ app-project {
     flex: 1;
     margin: 2rem;
     border-radius: 1rem;
-    background: #ffffff80
+    background: #ffffff80;
+    border: 2px solid #DDD;
 }
 
 app-project:hover {
+    border: 2px solid #ffffff80;
     box-shadow: 0px 0px 10px #AAA;
 }
 
