add animations & contact formatting

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -36,4 +36,10 @@ h1 {
 
 .icon i {
     font-size: 3rem;
+    transition-property: all;
+    transition-duration: .5s;
+}
+
+.icon:hover i {
+    transform: rotateY(360deg);
 }
