--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,45 +1,101 @@
 <h1>Contact</h1>
 
 <div class="form-container">
-    <form class="inner-container" #formDirective='ngForm' [formGroup]="contactForm" (ngSubmit)='formValidation(contactForm, formDirective)'>
+    <form 
+        class="inner-container" 
+        #formDirective='ngForm' 
+        [formGroup]="contactForm" 
+        (ngSubmit)='formValidation(contactForm, formDirective)'>
         <div *ngIf="displaySent" class="status-msg">
            <h3>Thank You {{ username }}!</h3>
            <p>Your message has been sent!</p>
         </div>
         <div *ngIf="displayError" class="status-msg">
             <h3>Sorry {{ username }}!</h3>
-            <p>There seems to have been an error processing the request. Please feel free to reach out to me using any of the contact/social information listed in the footer at the bottom of the page. Thank you!</p>
+            <p>
+                There seems to have been an error processing the request. Please 
+                feel free to reach out to me using any of the contact/social 
+                information listed in the footer at the bottom of the page. 
+                Thank you!
+            </p>
         </div>
+
         <div class="form-el">
-        <mat-form-field>
-            <input matInput formControlName="firstName" placeholder='First Name *' name="firstName" id="firstName" type="text">
-            <mat-error *ngIf="formErrors['firstName']">{{ formErrors['firstName'] }}</mat-error>
-        </mat-form-field>
-        </div>
-        <div class="form-el">
-            <mat-form-field>
-                <input matInput placeholder="Last Name" name="lastName" id="lastName" type="text">  
+            <mat-form-field appearance="outline">
+                <mat-label>First Name *</mat-label>
+                <input 
+                    matInput 
+                    formControlName="firstName" 
+                    #first='matInput' 
+                    name="firstName" 
+                    id="firstName" 
+                    type="text">
+                <mat-icon 
+                    matSuffix 
+                    [color]="getColor(contactForm.controls.firstName, first)">
+                    person
+                </mat-icon>
+                <mat-error *ngIf="formErrors['firstName']">
+                    {{ formErrors['firstName'] }}
+                </mat-error>
             </mat-form-field>
         </div>
+
         <div class="form-el">
-            <mat-form-field>
-                <input matInput placeholder="Company" name="company" id="company" type="text">
+            <mat-form-field appearance="outline">
+                <mat-label>Last Name</mat-label>
+                <input matInput name="lastName" id="lastName" type="text">  
+                <mat-icon matSuffix>person</mat-icon>
             </mat-form-field>
         </div>
+
         <div class="form-el">
-            <mat-form-field>
-                <input matInput formControlName="email" placeholder="E-mail *" name="email" id="email" type="text">
-                <mat-error *ngIf="formErrors['email']">{{ formErrors['email'] }}</mat-error>
+            <mat-form-field appearance="outline">
+                <mat-label>Company</mat-label>
+                <input matInput name="company" id="company" type="text">
+                <mat-icon matSuffix>work_outline</mat-icon>
             </mat-form-field>
         </div>
+
+        <div class="form-el">
+            <mat-form-field appearance="outline">
+                <mat-label>E-mail *</mat-label>
+                <input 
+                    matInput 
+                    formControlName="email" 
+                    #email='matInput' 
+                    name="email" 
+                    id="email" 
+                    type="text">
+                <mat-icon 
+                    matSuffix 
+                    [color]="getColor(contactForm.controls.email, email)">
+                    mail_outline
+                </mat-icon>
+                <mat-error *ngIf="formErrors['email']">
+                    {{ formErrors['email'] }}
+                </mat-error>
+            </mat-form-field>
+        </div>
+
         <div class="form-el">
             <mat-form-field appearance="outline">
                 <mat-label>Message *</mat-label>
-                <textarea matInput formControlName="message" name="comment" id="comment" cols="30" rows="10"></textarea>
-                <mat-error *ngIf="formErrors['message']">{{ formErrors['message'] }}</mat-error>
+                <textarea 
+                    matInput 
+                    formControlName="message" 
+                    name="comment" 
+                    id="comment" 
+                    cols="30" 
+                    rows="10">
+                </textarea>
+                <mat-error *ngIf="formErrors['message']">
+                    {{ formErrors['message'] }}
+                </mat-error>
             </mat-form-field>
+            
         </div>
+
         <button type="submit"> {{ sending ? "Sending..." : "Submit" }}</button>
-    
     </form>
 </div>
