--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -46,11 +46,13 @@ app-project {
     margin: 2rem;
     border-radius: 1rem;
     background: #ffffff80;
-    border: 2px solid #DDD;
+    box-shadow: 0px 0px 3px #AAA;
+    transition-property: all;
+    transition-duration: .15s;
+    transition-timing-function: ease-in;
 }
 
 app-project:hover {
-    border: 2px solid #ffffff80;
     box-shadow: 0px 0px 10px #AAA;
 }
 
