--- a/src/app/home/project/project.component.css
+++ b/src/app/home/project/project.component.css
@@ -3,7 +3,17 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    justify-content: space-between
+    justify-content: space-between;
+    transition-property: all;
+    transition-duration: .15s;
+    transition-timing-function: ease-in;
+}
+
+.project-container mat-icon,
+.project-container a {
+    transition-property: all;
+    transition-duration: .15s;
+    transition-timing-function: ease-in;
 }
 
 .project-container:hover mat-icon {
@@ -35,6 +45,7 @@ p {
     color: #fcfcfc;
     background: #000080;
 }
+
 a {
     color: #000080;
     background: #fcfcfc;
@@ -43,6 +54,10 @@ a {
     border: 1px solid #000080;
     padding: .5em;
     text-align: center;
+    transition-property: all;
+    transition-duration: .15s;
+    transition-timing-function: ease-out;
+
 }
  
 a:hover {
