iOS css, resolved bug where some fields where not sent to email. iframe in progross

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,7 @@
         <h2>My Story</h2>
         <p> 
             It is an incredible thing when passions and talents align. I navigated my way down a unique professional 
-            path before discovering that alignment for myself in coding. My studies in college were focused on the 
+            path before discovering that alignment for myself in coding. My studies at the University of Michigan were focused on the 
             pursuance of a career in physical therapy. After 2 years working in a clinic, I had developed strong 
             interpersonal and critical thinking skills, but was ultimately faced with the decision of getting a 
             doctorates in physical therapy or changing careers. The craft beer industry was booming and I had 
