--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -9,9 +9,16 @@ h1 {
 }
 
 iframe {
-    width: 75%;
+    width: 1px;
+    min-width: 100%;
+    width: 100%;
     height: 500px;
 }
+
+/* iframe {
+    width: 75%;
+    height: 500px;
+} */
 
 @media screen and (min-width: 600px) {
     iframe {
