resposive iframe css

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -30,7 +30,7 @@ button {
     border: 1px solid #000080;
     padding: .5em 1em;
     text-align: center;
-    margin: 1rem 0;
+    margin: 1rem auto;
     cursor: pointer;
     color: #EEE;
     background-color: #000080;
