--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -2,27 +2,54 @@ h1 {
     text-align: center;
 }
 
+
 .container {
+    position: relative;
+    padding-bottom: 130%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+}
+
+/* .container {
     display: flex;
     justify-content: center;
     margin-bottom: 2rem;
 }
-
-iframe {
-    width: 1px;
-    min-width: 100%;
-    width: 100%;
-    height: 500px;
-}
+ */
 
 /* iframe {
+    width: 1px;
+    min-width: 100%;
+}
+
+iframe {
     width: 75%;
     height: 500px;
 } */
 
 @media screen and (min-width: 600px) {
-    iframe {
+    .container {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        margin-bottom: 2rem;
+        overflow: auto;
         height: 95vh;
+    }
+
+    iframe {
+        position: static;
+        display: flex;
+        width: 75%;
     }
 }
 
