max-width to img & resume filename & title changed

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,4 @@
 <h1>Resume</h1>
 <div class="container">
-    <iframe src="assets/img/PortfolioResume.pdf"></iframe>
+    <iframe src="assets/img/byker-resume.pdf"></iframe>
 </div>
