--- a/src/app/about/my-card/my-card.component.css
+++ b/src/app/about/my-card/my-card.component.css
@@ -18,13 +18,14 @@ img {
     border-radius: 1rem;
     margin: 2rem 1rem;
     min-width: 250px;
+    max-width: 350px;
 }
 
 .info {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 1rem;
+    margin: auto 1rem;
 }
 
 .info h1 {
