updated resume, increased font-weight, added footer links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <nav>
-  <h1 routerLink="/home">Bryce Byker</h1>
+  <h1 routerLink="/home" class="name">Bryce Byker</h1>
   <div *ngIf="!(mobile | async).matches">
     <ul>
       <a routerLink="/home" routerLinkActive="active">Home</a>
