--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,9 +19,9 @@
         <div class="social-links">
           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="bryce-byker"><a class="LI-simple-link" href='https://www.linkedin.com/in/bryce-byker?trk=profile-badge'>Bryce Byker</a></div>
           <p class="plus">+</p>
-          <img class="github-logo" src="assets/img/GitHub-logo.png" alt="">  
+          <a href="https://github.com/bykerbry" target="_blank"><img class="github-logo" src="assets/img/GitHub-logo.png" alt="GitHub Logo"></a>  
         </div>  
       </div>  
     </div>
-    <p class="design">Design by Bryce Byker</p>
+    <p class="design">Design by Bryce Byker. See Code <a class="gitHub-link" href="https://github.com/Bykerbry/portfolio" target="_blank">Here.</a></p>
   </footer>
