--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     color: #EEEEEE;
     margin: 0;
-    padding: 1em;
+    padding: 1em 0 1em 1rem;
     align-self: center;
     cursor: pointer;
 }
@@ -91,4 +91,16 @@ h2 {
     text-align: center;
     padding-right: 3rem;
     padding-left: 3rem;
+}
+
+
+@media screen and (min-width: 600px) {
+    h1 {
+        padding: 1em;
+    }
+}
+@media screen and (min-width: 1024px) {
+    a {
+        margin: 1rem 1.5rem;
+    }
 }
